--- a/processing.ipynb
+++ b/processing.ipynb
@@ -476,7 +476,7 @@
     "\n",
     "    local_df = pd.DataFrame()\n",
     "\n",
-    "    local_df[\"Cell Id\"] = np.array([file_name] * len(cycle_l))\n",
+    "    local_df[\"Cell ID\"] = np.array([file_name] * len(cycle_l))\n",
     "    local_df[\"Cycle\"] = np.array(cycle_l)\n",
     "    local_df[\"Cycle_time\"] = np.array(cycle_time_l)\n",
     "\n",
@@ -507,7 +507,7 @@
    "source": [
     "def process_csvs():\n",
     "    csvs_l = os.listdir('./Li-ion_Batteries/')\n",
-    "    general_dataframe = pd.DataFrame(columns=['Cell Id', 'Cycle', 'Cycle_time', \n",
+    "    general_dataframe = pd.DataFrame(columns=['Cell ID', 'Cycle', 'Cycle_time', \n",
     "                                'Min_current', 'Max_current',\n",
     "                                'Min_voltage', 'Max_voltage',\n",
     "                                'Charge_capacity', 'Charge_capacity_ratio',\n",
@@ -521,7 +521,7 @@
     "    general_dataframe = general_dataframe.reset_index()\n",
     "    general_dataframe = general_dataframe.rename(columns={\"index\": \"Internal_index\"})\n",
     "\n",
-    "    d = {'Cell Id': 'object', 'Cycle': 'int64', 'Cycle_time': 'float64', \n",
+    "    d = {'Cell ID': 'object', 'Cycle': 'int64', 'Cycle_time': 'float64', \n",
     "            'Min_current': 'float64', 'Max_current': 'float64',\n",
     "            'Min_voltage': 'float64', 'Max_voltage': 'float64',\n",
     "            'Charge_capacity': 'float64', 'Charge_capacity_ratio': 'float64',\n",
