--- a/processing.ipynb
+++ b/processing.ipynb
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Internal_index</th>\n",
-       "      <th>Cell Id</th>\n",
+       "      <th>Cell ID</th>\n",
        "      <th>Cycle</th>\n",
        "      <th>Cycle_time</th>\n",
        "      <th>Min_current</th>\n",
@@ -823,7 +823,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   Internal_index                                      Cell Id  Cycle  \\\n",
+       "   Internal_index                                      Cell ID  Cycle  \\\n",
        "0               0  CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a      0   \n",
        "1               1  CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a      1   \n",
        "2               2  CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a     21   \n",
@@ -859,7 +859,7 @@
        "4           4.67840                0.989091  "
       ]
      },
-     "execution_count": 179,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Internal_index</th>\n",
-       "      <th>Cell Id</th>\n",
+       "      <th>Cell ID</th>\n",
        "      <th>Cycle</th>\n",
        "      <th>Cycle_time</th>\n",
        "      <th>Min_current</th>\n",
@@ -1014,7 +1014,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       Internal_index                                           Cell Id  \\\n",
+       "       Internal_index                                           Cell ID  \\\n",
        "15921              36  UL-PUR_R20-OV1_18650_NCA_23C_2.5-96.5_0.5-0.5C_a   \n",
        "15922              37  UL-PUR_R20-OV1_18650_NCA_23C_2.5-96.5_0.5-0.5C_a   \n",
        "15923              38  UL-PUR_R20-OV1_18650_NCA_23C_2.5-96.5_0.5-0.5C_a   \n",
@@ -1050,7 +1050,7 @@
        "15925           5.35765                0.565272  "
       ]
      },
-     "execution_count": 180,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
        "(15926, 16)"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,14 +1081,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Internal_index                int64\n",
-       "Cell Id                      object\n",
+       "Cell ID                      object\n",
        "Cycle                         int64\n",
        "Cycle_time                  float64\n",
        "Min_current                 float64\n",
@@ -1106,7 +1106,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
       " #   Column                    Non-Null Count  Dtype  \n",
       "---  ------                    --------------  -----  \n",
       " 0   Internal_index            15926 non-null  int64  \n",
-      " 1   Cell Id                   15926 non-null  object \n",
+      " 1   Cell ID                   15926 non-null  object \n",
       " 2   Cycle                     15926 non-null  int64  \n",
       " 3   Cycle_time                15926 non-null  float64\n",
       " 4   Min_current               15926 non-null  float64\n",
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -1396,13 +1396,22 @@
        "Discharge_energy_ratio       0.196994     0.520842      0.852945  1.355095e+00  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "general_dataframe.describe().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "general_dataframe.to_csv('li-ion_batteries_cycling_stats_aggregated.csv')"
    ]
   }
  ],
