Remove unnecessary indexes

--- a/merge_notebook.ipynb
+++ b/merge_notebook.ipynb
@@ -1055,7 +1055,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_dataframe.to_csv('li-ion_batteries_cycling_stats+metadata_aggregated.csv')"
+    "result_dataframe.to_csv('li-ion_batteries_cycling_stats+metadata_aggregated.csv', index = False)"
    ]
   }
  ],
