--- a/merge_notebook.ipynb
+++ b/merge_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
        "9                 1.5  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -550,7 +550,7 @@
        "9           4.56795                0.965740  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -573,7 +573,7 @@
        "(137, 11)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -595,7 +595,7 @@
        "(15926, 17)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -628,7 +628,7 @@
        "(15926, 27)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -1040,13 +1040,348 @@
        "[150 rows x 27 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "result_dataframe.tail(150)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_dataframe = result_dataframe.rename(columns={'Temperature (C)':'Temperature', 'Charge Rate (C)':'Charge_rate', 'Discharge Rate (C)':'Discharge_rate'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_dataframe = result_dataframe.drop('Unnamed: 0', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Cell ID',\n",
+       " 'Anode',\n",
+       " 'Cathode',\n",
+       " 'Source',\n",
+       " 'Ah',\n",
+       " 'Form Factor',\n",
+       " 'Temperature',\n",
+       " 'Max SOC',\n",
+       " 'Min SOC',\n",
+       " 'Charge_rate',\n",
+       " 'Discharge_rate',\n",
+       " 'Internal_index',\n",
+       " 'Cycle',\n",
+       " 'Cycle_time',\n",
+       " 'Min_current',\n",
+       " 'Max_current',\n",
+       " 'Min_voltage',\n",
+       " 'Max_voltage',\n",
+       " 'Charge_capacity',\n",
+       " 'Charge_capacity_ratio',\n",
+       " 'Discharge_capacity',\n",
+       " 'Discharge_capacity_ratio',\n",
+       " 'Charge_energy',\n",
+       " 'Charge_energy_ratio',\n",
+       " 'Discharge_energy',\n",
+       " 'Discharge_energy_ratio']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cols = result_dataframe.columns.tolist()\n",
+    "cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Internal_index',\n",
+       " 'Cell ID',\n",
+       " 'Anode',\n",
+       " 'Cathode',\n",
+       " 'Source',\n",
+       " 'Ah',\n",
+       " 'Form Factor',\n",
+       " 'Temperature',\n",
+       " 'Max SOC',\n",
+       " 'Min SOC',\n",
+       " 'Charge_rate',\n",
+       " 'Discharge_rate',\n",
+       " 'Cycle',\n",
+       " 'Cycle_time',\n",
+       " 'Min_current',\n",
+       " 'Max_current',\n",
+       " 'Min_voltage',\n",
+       " 'Max_voltage',\n",
+       " 'Charge_capacity',\n",
+       " 'Charge_capacity_ratio',\n",
+       " 'Discharge_capacity',\n",
+       " 'Discharge_capacity_ratio',\n",
+       " 'Charge_energy',\n",
+       " 'Charge_energy_ratio',\n",
+       " 'Discharge_energy',\n",
+       " 'Discharge_energy_ratio']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cols.remove('Internal_index')\n",
+    "cols.insert(0, 'Internal_index')\n",
+    "cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Internal_index</th>\n",
+       "      <th>Cell ID</th>\n",
+       "      <th>Anode</th>\n",
+       "      <th>Cathode</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Ah</th>\n",
+       "      <th>Form Factor</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Max SOC</th>\n",
+       "      <th>Min SOC</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Min_voltage</th>\n",
+       "      <th>Max_voltage</th>\n",
+       "      <th>Charge_capacity</th>\n",
+       "      <th>Charge_capacity_ratio</th>\n",
+       "      <th>Discharge_capacity</th>\n",
+       "      <th>Discharge_capacity_ratio</th>\n",
+       "      <th>Charge_energy</th>\n",
+       "      <th>Charge_energy_ratio</th>\n",
+       "      <th>Discharge_energy</th>\n",
+       "      <th>Discharge_energy_ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a</td>\n",
+       "      <td>graphite</td>\n",
+       "      <td>LCO</td>\n",
+       "      <td>calce</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>prismatic</td>\n",
+       "      <td>25</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.699</td>\n",
+       "      <td>4.20000</td>\n",
+       "      <td>1.26800</td>\n",
+       "      <td>0.788644</td>\n",
+       "      <td>1.26900</td>\n",
+       "      <td>0.788022</td>\n",
+       "      <td>5.07300</td>\n",
+       "      <td>0.197122</td>\n",
+       "      <td>4.72500</td>\n",
+       "      <td>0.211640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a</td>\n",
+       "      <td>graphite</td>\n",
+       "      <td>LCO</td>\n",
+       "      <td>calce</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>prismatic</td>\n",
+       "      <td>25</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.699</td>\n",
+       "      <td>4.20000</td>\n",
+       "      <td>1.26800</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.26900</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.07100</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.73000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a</td>\n",
+       "      <td>graphite</td>\n",
+       "      <td>LCO</td>\n",
+       "      <td>calce</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>prismatic</td>\n",
+       "      <td>25</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.699</td>\n",
+       "      <td>4.20095</td>\n",
+       "      <td>1.25355</td>\n",
+       "      <td>0.988604</td>\n",
+       "      <td>1.25335</td>\n",
+       "      <td>0.987667</td>\n",
+       "      <td>5.01130</td>\n",
+       "      <td>0.988227</td>\n",
+       "      <td>4.66770</td>\n",
+       "      <td>0.986829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a</td>\n",
+       "      <td>graphite</td>\n",
+       "      <td>LCO</td>\n",
+       "      <td>calce</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>prismatic</td>\n",
+       "      <td>25</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.699</td>\n",
+       "      <td>4.20180</td>\n",
+       "      <td>1.25905</td>\n",
+       "      <td>0.992942</td>\n",
+       "      <td>1.26040</td>\n",
+       "      <td>0.993223</td>\n",
+       "      <td>5.03610</td>\n",
+       "      <td>0.993118</td>\n",
+       "      <td>4.69795</td>\n",
+       "      <td>0.993224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a</td>\n",
+       "      <td>graphite</td>\n",
+       "      <td>LCO</td>\n",
+       "      <td>calce</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>prismatic</td>\n",
+       "      <td>25</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.699</td>\n",
+       "      <td>4.20145</td>\n",
+       "      <td>1.25475</td>\n",
+       "      <td>0.989550</td>\n",
+       "      <td>1.25450</td>\n",
+       "      <td>0.988574</td>\n",
+       "      <td>5.01225</td>\n",
+       "      <td>0.988415</td>\n",
+       "      <td>4.67840</td>\n",
+       "      <td>0.989091</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Internal_index                                      Cell ID     Anode  \\\n",
+       "0               0  CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a  graphite   \n",
+       "1               1  CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a  graphite   \n",
+       "2               2  CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a  graphite   \n",
+       "3               3  CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a  graphite   \n",
+       "4               4  CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a  graphite   \n",
+       "\n",
+       "  Cathode Source    Ah Form Factor  Temperature  Max SOC  Min SOC  ...  \\\n",
+       "0     LCO  calce  1.35   prismatic           25    100.0      0.0  ...   \n",
+       "1     LCO  calce  1.35   prismatic           25    100.0      0.0  ...   \n",
+       "2     LCO  calce  1.35   prismatic           25    100.0      0.0  ...   \n",
+       "3     LCO  calce  1.35   prismatic           25    100.0      0.0  ...   \n",
+       "4     LCO  calce  1.35   prismatic           25    100.0      0.0  ...   \n",
+       "\n",
+       "   Min_voltage  Max_voltage  Charge_capacity  Charge_capacity_ratio  \\\n",
+       "0        2.699      4.20000          1.26800               0.788644   \n",
+       "1        2.699      4.20000          1.26800               1.000000   \n",
+       "2        2.699      4.20095          1.25355               0.988604   \n",
+       "3        2.699      4.20180          1.25905               0.992942   \n",
+       "4        2.699      4.20145          1.25475               0.989550   \n",
+       "\n",
+       "   Discharge_capacity  Discharge_capacity_ratio  Charge_energy  \\\n",
+       "0             1.26900                  0.788022        5.07300   \n",
+       "1             1.26900                  1.000000        5.07100   \n",
+       "2             1.25335                  0.987667        5.01130   \n",
+       "3             1.26040                  0.993223        5.03610   \n",
+       "4             1.25450                  0.988574        5.01225   \n",
+       "\n",
+       "   Charge_energy_ratio  Discharge_energy  Discharge_energy_ratio  \n",
+       "0             0.197122           4.72500                0.211640  \n",
+       "1             1.000000           4.73000                1.000000  \n",
+       "2             0.988227           4.66770                0.986829  \n",
+       "3             0.993118           4.69795                0.993224  \n",
+       "4             0.988415           4.67840                0.989091  \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_dataframe = result_dataframe[cols]\n",
+    "result_dataframe.head(5)"
    ]
   },
   {
