--- a/merge_notebook.ipynb
+++ b/merge_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
        "9                 1.5  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -550,7 +550,7 @@
        "9           4.56795                0.965740  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -573,7 +573,7 @@
        "(137, 11)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -595,7 +595,7 @@
        "(15926, 17)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -628,7 +628,7 @@
        "(15926, 27)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -1040,7 +1040,7 @@
        "[150 rows x 27 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1060,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_dataframe = result_dataframe.rename(columns={'Cell ID  ':'Cell_ID', 'Max SOC':'Max_SOC', 'Min SOC':'Min_SOC', 'Form Factor':'Form_factor'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1080,10 +1089,10 @@
        " 'Cathode',\n",
        " 'Source',\n",
        " 'Ah',\n",
-       " 'Form Factor',\n",
+       " 'Form_factor',\n",
        " 'Temperature',\n",
-       " 'Max SOC',\n",
-       " 'Min SOC',\n",
+       " 'Max_SOC',\n",
+       " 'Min_SOC',\n",
        " 'Charge_rate',\n",
        " 'Discharge_rate',\n",
        " 'Internal_index',\n",
@@ -1103,7 +1112,7 @@
        " 'Discharge_energy_ratio']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1115,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1127,10 +1136,10 @@
        " 'Cathode',\n",
        " 'Source',\n",
        " 'Ah',\n",
-       " 'Form Factor',\n",
+       " 'Form_factor',\n",
        " 'Temperature',\n",
-       " 'Max SOC',\n",
-       " 'Min SOC',\n",
+       " 'Max_SOC',\n",
+       " 'Min_SOC',\n",
        " 'Charge_rate',\n",
        " 'Discharge_rate',\n",
        " 'Cycle',\n",
@@ -1149,7 +1158,7 @@
        " 'Discharge_energy_ratio']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1192,10 +1201,10 @@
        "      <th>Cathode</th>\n",
        "      <th>Source</th>\n",
        "      <th>Ah</th>\n",
-       "      <th>Form Factor</th>\n",
+       "      <th>Form_factor</th>\n",
        "      <th>Temperature</th>\n",
-       "      <th>Max SOC</th>\n",
-       "      <th>Min SOC</th>\n",
+       "      <th>Max_SOC</th>\n",
+       "      <th>Min_SOC</th>\n",
        "      <th>...</th>\n",
        "      <th>Min_voltage</th>\n",
        "      <th>Max_voltage</th>\n",
@@ -1343,7 +1352,7 @@
        "3               3  CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a  graphite   \n",
        "4               4  CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a  graphite   \n",
        "\n",
-       "  Cathode Source    Ah Form Factor  Temperature  Max SOC  Min SOC  ...  \\\n",
+       "  Cathode Source    Ah Form_factor  Temperature  Max_SOC  Min_SOC  ...  \\\n",
        "0     LCO  calce  1.35   prismatic           25    100.0      0.0  ...   \n",
        "1     LCO  calce  1.35   prismatic           25    100.0      0.0  ...   \n",
        "2     LCO  calce  1.35   prismatic           25    100.0      0.0  ...   \n",
@@ -1374,7 +1383,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1386,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
