--- a/merge_notebook.ipynb
+++ b/merge_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
        "9                 1.5  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -550,7 +550,7 @@
        "9           4.56795                0.965740  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -573,7 +573,7 @@
        "(137, 11)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -595,7 +595,7 @@
        "(15926, 17)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -628,7 +628,7 @@
        "(15926, 27)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -1040,7 +1040,7 @@
        "[150 rows x 27 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,16 +1060,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_dataframe = result_dataframe.rename(columns={'Cell ID  ':'Cell_ID', 'Max SOC':'Max_SOC', 'Min SOC':'Min_SOC', 'Form Factor':'Form_factor'})"
+    "result_dataframe = result_dataframe.rename(columns={'Cell ID':'Cell_ID', 'Max SOC':'Max_SOC', 'Min SOC':'Min_SOC', 'Form Factor':'Form_factor'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,13 +1078,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Cell ID',\n",
+       "['Cell_ID',\n",
        " 'Anode',\n",
        " 'Cathode',\n",
        " 'Source',\n",
@@ -1112,7 +1112,7 @@
        " 'Discharge_energy_ratio']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,14 +1124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Internal_index',\n",
-       " 'Cell ID',\n",
+       " 'Cell_ID',\n",
        " 'Anode',\n",
        " 'Cathode',\n",
        " 'Source',\n",
@@ -1158,7 +1158,7 @@
        " 'Discharge_energy_ratio']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1196,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Internal_index</th>\n",
-       "      <th>Cell ID</th>\n",
+       "      <th>Cell_ID</th>\n",
        "      <th>Anode</th>\n",
        "      <th>Cathode</th>\n",
        "      <th>Source</th>\n",
@@ -1345,7 +1345,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   Internal_index                                      Cell ID     Anode  \\\n",
+       "   Internal_index                                      Cell_ID     Anode  \\\n",
        "0               0  CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a  graphite   \n",
        "1               1  CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a  graphite   \n",
        "2               2  CALCE_CX2-16_prism_LCO_25C_0-100_0.5-0.5C_a  graphite   \n",
@@ -1383,7 +1383,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
