--- a/XGRegressor_sklearn.ipynb
+++ b/XGRegressor_sklearn.ipynb
@@ -449,7 +449,7 @@
    },
    "outputs": [],
    "source": [
-    "dataset.drop(columns=['Internal_index','Cell_ID', 'Cell_model','Source'],inplace=True)"
+    "dataset.drop(columns=['Internal_index', 'Cell_ID', 'Cell_model', 'Source'],inplace=True)"
    ]
   },
   {
@@ -891,7 +891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
